@@ -167,7 +167,7 @@ public class UserLoginService {
                 organizationExample.createCriteria().andIdIn(orgIds).andEnableEqualTo(true);
                 List<Organization> organizationsList = organizationMapper.selectByExample(organizationExample);
                 if (CollectionUtils.isNotEmpty(organizationsList)) {
-                    String wsId = organizationsList.get(0).getId();
+                    String wsId = organizationsList.getFirst().getId();
                     switchUserResource(wsId, user);
                 }
             } else {
@@ -178,7 +178,7 @@ public class UserLoginService {
             }
         } else {
             UserRoleRelation userRoleRelation = project.stream().filter(p -> StringUtils.isNotBlank(p.getSourceId()))
-                    .toList().get(0);
+                    .toList().getFirst();
             String projectId = userRoleRelation.getSourceId();
             Project p = projectMapper.selectByPrimaryKey(projectId);
             String wsId = p.getOrganizationId();
@@ -199,7 +199,7 @@ public class UserLoginService {
                 example.createCriteria().andIdEqualTo(user.getLastProjectId()).andEnableEqualTo(true);
                 List<Project> projects = projectMapper.selectByExample(example);
                 if (CollectionUtils.isNotEmpty(projects)) {
-                    Project project = projects.get(0);
+                    Project project = projects.getFirst();
                     if (StringUtils.equals(project.getOrganizationId(), user.getLastOrganizationId())) {
                         return true;
                     }
@@ -221,7 +221,7 @@ public class UserLoginService {
                 example.createCriteria().andIdEqualTo(user.getLastProjectId()).andEnableEqualTo(true);
                 List<Project> projects = projectMapper.selectByExample(example);
                 if (CollectionUtils.isNotEmpty(projects)) {
-                    Project project = projects.get(0);
+                    Project project = projects.getFirst();
                     if (StringUtils.equals(project.getOrganizationId(), user.getLastOrganizationId())) {
                         return true;
                     }
@@ -307,7 +307,7 @@ public class UserLoginService {
                     updateUser(user);
                     return true;
                 }
-                Optional<Project> first = projects.stream().filter(p -> StringUtils.equals(intersection.get(0), p.getId())).findFirst();
+                Optional<Project> first = projects.stream().filter(p -> StringUtils.equals(intersection.getFirst(), p.getId())).findFirst();
                 if (first.isPresent()) {
                     Project project = first.get();
                     String wsId = project.getOrganizationId();
@@ -332,7 +332,7 @@ public class UserLoginService {
         user.setLastProjectId(StringUtils.EMPTY);
         List<Project> projects = getProjectListByWsAndUserId(sessionUser.getId(), sourceId);
         if (CollectionUtils.isNotEmpty(projects)) {
-            user.setLastProjectId(projects.get(0).getId());
+            user.setLastProjectId(projects.getFirst().getId());
         }
         BeanUtils.copyProperties(user, newUser);
         // 切换组织或组织之后更新 session 里的 user
@@ -363,7 +363,7 @@ public class UserLoginService {
                 // 如果传入的 last_project_id 是 last_organization_id 下面的
                 boolean present = projects.stream().anyMatch(p -> StringUtils.equals(p.getId(), user.getLastProjectId()));
                 if (!present) {
-                    user.setLastProjectId(projects.get(0).getId());
+                    user.setLastProjectId(projects.getFirst().getId());
                 }
             } else {
                 user.setLastProjectId(StringUtils.EMPTY);
@@ -411,7 +411,7 @@ public class UserLoginService {
             return null;
         }
 
-        return getUserDTO(users.get(0).getId());
+        return getUserDTO(users.getFirst().getId());
     }
 
     public boolean checkUserPassword(String userId, String password) {
